[package]
name = "statx-sys"
version = "0.2.1"
authors = ["uHOOCCOOHu <hooccooh1896@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["os::unix-apis", "external-ffi-bindings"]
keywords = ["statx", "linux", "ffi", "system"]
repository = "https://github.com/uHOOCCOOHu/statx-sys"
description = "Bindings to `statx` syscall."
readme = "README.md"

[dependencies]
libc = { version = "^0.2.51", default-features = false }

[dev-dependencies]
memoffset = "^0.5.1"
